Fix menu and expand bugs, quick media size fix on mobile

--- a/css/stylesheet-responsive.css
+++ b/css/stylesheet-responsive.css
@@ -179,3 +179,120 @@ ____________________________________________________
 		width: 15px;
 	}
 }
+
+/* MOBILE NAV, MERGE IN WITH OTHER SECTIONS */
+@media (max-width: 800px) {
+	.section-anchor {
+		scroll-margin-top: 0; /* nav height */
+	}
+
+    #mobile-menu-button {
+        display: block;
+        background: #ff69b4;
+        color: #000;
+        border: 3px solid #000;
+        padding: 0.25em .5em;
+        font-size: 2em;
+        cursor: pointer;
+        width: auto;
+    }
+	#mobile-menu-wrapper {
+		display: block;
+		position: fixed;
+		top: 0;
+		right: 0;
+		z-index: 200;
+	}
+    #mobile-menu-wrapper nav {
+        display: none;
+        position: absolute;
+        top: 3.5em; /* just below the button */
+        right: 0;
+        width: max-content;
+        min-width: 8em;
+        background: #ff69b4;
+        border: 3px solid #000;
+        /* box-shadow: 0 0.5em 1em rgba(0,0,0,0.1); */
+        z-index: 201;
+        padding: 0.5em 0;
+    }
+    #mobile-menu-wrapper nav ul {
+        text-align: right;
+        padding: 0;
+        margin: 0;
+    }
+    #mobile-menu-wrapper nav ul li {
+        display: block;
+        padding: 0.25em 1.5em;
+    }
+    #mobile-menu-wrapper nav ul li a {
+        color: #000 !important;
+        font-size: 2em;
+        line-height: 1.2;
+        background: none;
+        text-decoration: none;
+        display: block;
+    }
+    #mobile-menu-wrapper nav ul li a:hover {
+        color: #ff69b4 !important;
+		background: #000 !important;
+    }
+
+	section#news ol,
+	section#research ol,
+	section#team ol {
+		display: block;
+		column-count: 1 !important;
+		/* If you use flex, override it: */
+		flex-direction: column !important;
+	}
+	section#news ol > li,
+	section#research ol > li,
+	section#team ol > li {
+		width: 100% !important;
+		display: block;
+		margin: 0 0 1.5em 0 !important;
+	}
+
+	section#news li.start-hidden {
+		display: none;
+	}
+
+
+	#video-container {
+		min-height: 50vw; 
+		height: auto;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	  }
+	  #video-container video {
+		width: 100%;
+		height: auto;
+		min-height: 40vw; 
+		max-height: 60vw; 
+		object-fit: cover;
+	  }
+
+	  #gallery-frame {
+		max-height: 60vw; 
+		overflow-y: auto;
+		padding-bottom: 1em;
+	  }
+	  #gallery-container {
+		display: flex;
+		flex-direction: row;
+		overflow-x: auto;
+		gap: 10px;
+		height: 100%;
+		align-items: center;
+	  }
+	  .photo-gallery {
+		min-width: 60vw;
+		height: 40vw;
+		background-size: cover;
+		background-position: center;
+		margin: 0;
+	  }
+}
